bugfix Greece flag and button visibility

--- a/assets/app.css
+++ b/assets/app.css
@@ -160,6 +160,7 @@ input[type="search"] {
     background: lightskyblue;
     border: none;
     color: #222;
+    font-size: unset;
     margin: 0 0 .5em 0;
     padding: .4em .6em;
     width: 100%;
@@ -172,6 +173,8 @@ input[type="search"]:focus-visible {
     border: .1em solid #222;
     color: #222;
     float: right;
+    font-family: Lato, sans-serif;
+    font-size: unset;
     padding: .5em .8em;
 }
 
